package com.directi.training.srp.exercise;

import java.util.List;

public class CarNamesList {

    private final List<Car> cars;

    public CarNamesList(List<Car> cars) {
        this.cars = cars;
    }

    public String getCarsNames() {
        StringBuilder sb = new StringBuilder();
        for (Car car : cars) {
            sb.append(car.getBrand());
            sb.append(" ");
            sb.append(car.getModel());
            sb.append(", ");
        }
        return sb.substring(0, sb.length() - 2);
    }
}
